# CHANGES TO MTurkR 0.7 #

## SIGNIFICANT USER-VISIBILE CHANGES ##

* `GrantBonus` now accepts a `unique.request.token` argument. (#75)
* The unused `format` argument to `GenerateNotification` has been removed. (#71)

## DOCUMENTATION ##

* Documentation for `GrantQualification` and `RejectQualification` has been merged to clarify the use of these functions. Documentation has been expanded with complete examples of both functions. (#72)
* `GenerateQualificationRequirement` now notes that U.S. state locale values (following ISO 3166-2 format) are allows. (#74)
* `GenerateHITsFromTemplate` now has a more complete example that includes an installed template HTML file. (#72)
* Several small changes have been made to correct documentation and fix bad formatting in the PDF version of the manual. (#72)

## BUG FIXES ##

* `GetStatistic` now consistently returns a three-column data frame containing the name of the requested statistic, its value, and the date of the statistic. If the request fails, this data.frame has zero rows. Printing of request information (if `verbose = TRUE`) has further been fixed to prevent incorrect printing when `count` was specified. (#78)
* Fixed a bug in `ExtendHIT` wherein specifying both `add.assignments` and `add.seconds` caused only assignments to be incremented. (#79)


# CHANGES TO MTurkR 0.6 #

## SIGNIFICANT USER-VISIBLE CHANGES ##

* `GetReviewResults` should now be able to return all results. This is untested due to the large page size of ReviewResults (65,535). (#54)
* The graphical wizard now uses "themed" tk (ttk) widgets where possible, in order to improve the appearance. This creates a dependency on tcl >= 8.5.
* The graphical wizard now allows retrieval of assignments by requester annotation (or batch) field.
* The graphical and text-based wizards now allow you to preview the email that will be sent to workers using the `ContactWorkers` function. (#53)