@@ -1,5 +1,5 @@
 Package: MTurkR
-Version: 0.6.21
+Version: 0.6.22
 Date: 2015-03-19
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
