@@ -2219,34 +2219,66 @@ function(style="tcltk", sandbox=getOption('MTurkR.sandbox')) {
             testDialog <- tktoplevel()
             tkwm.title(testDialog, "Configure Qualification Test")
             aframe <- ttklabelframe(testDialog, text = "Qualification Test XML:")
-                test.entry <- tktext(aframe, height = 6, width = 75, background = "white")
+                test.scroll <- tkscrollbar(aframe, repeatinterval = 5,
+                                           command = function(...){ tkyview(test.entry, ...) })
+                test.entry <- tktext(aframe, height = 6, width = 75, background = "white",
+                                     yscrollcommand = function(...) tkset(test.scroll, ...))
                 tkmark.set(test.entry,"insert","0.0")
-                tkgrid(test.entry)
+                tkgrid(test.entry, row = 1, column = 1, sticky = "nsew")
+                tkgrid(test.scroll, row = 1, column = 2, sticky = "nsew")
             bframe <- ttklabelframe(testDialog, text = "AnswerKey XML (optional):")
-                answer.entry <- tktext(bframe, height = 6, width = 75, background = "white")
+                answer.scroll <- tkscrollbar(bframe, repeatinterval = 5,
+                                             command = function(...){ tkyview(answer.entry, ...) })
+                answer.entry <- tktext(bframe, height = 6, width = 75, background = "white",
+                                       yscrollcommand = function(...) tkset(answer.scroll, ...))
                 tkmark.set(answer.entry,"insert","0.0")
-                tkgrid(answer.entry)
-            tkgrid(aframe)
-            tkgrid(bframe)
+                tkgrid(answer.entry, row = 1, column = 1, sticky = "nsew")
+                tkgrid(answer.scroll, row = 1, column = 2, sticky = "nsew")
+            tkgrid(aframe, row = 1, column = 1, columnspan = 2, sticky = "nsew")
+            tkgrid(bframe, row = 2, column = 1, columnspan = 2, sticky = "nsew")
+            tkgrid.columnconfigure(aframe, 1, weight = 1)
+            tkgrid.columnconfigure(aframe, 2, weight = 0)
+            tkgrid.rowconfigure(aframe, 1, weight = 1)
+            tkgrid.columnconfigure(bframe, 1, weight = 1)
+            tkgrid.columnconfigure(bframe, 2, weight = 0)
+            tkgrid.rowconfigure(bframe, 1, weight = 1)
             cframe <- ttklabelframe(testDialog, text = "How long should the test last?")
                 days <- tclVar("0")
                 hours <- tclVar("0")
                 mins <- tclVar("0")
                 secs <- tclVar("0")
-                days.entry <- wzentry(cframe, width = 5, textvariable=days)
-                hours.entry <- wzentry(cframe, width = 5, textvariable=hours)
-                mins.entry <- wzentry(cframe, width = 5, textvariable=mins)
-                secs.entry <- wzentry(cframe, width = 5, textvariable=secs)
-                tkgrid(ttklabel(cframe, text = "Days: "), row=1, column=1)
-                tkgrid(days.entry, row=1, column=2)
-                tkgrid(ttklabel(cframe, text = "Hours: "), row=1, column=3)
-                tkgrid(hours.entry, row=1, column=4)
-                tkgrid(ttklabel(cframe, text = "Minutes: "), row=1, column=5)
-                tkgrid(mins.entry, row=1, column=6)
-                tkgrid(ttklabel(cframe, text = "Seconds: "), row=1, column=7)
-                tkgrid(secs.entry, row=1, column=8)
-            tkgrid(cframe, sticky = "w")
-            okcancel(testDialog, okfun = storetest, cancelfun = function() {tkdestroy(testDialog); tkfocus(wizard)})
+                days.entry <- wzentry(cframe, width = 5, textvariable = days)
+                hours.entry <- wzentry(cframe, width = 5, textvariable = hours)
+                mins.entry <- wzentry(cframe, width = 5, textvariable = mins)
+                secs.entry <- wzentry(cframe, width = 5, textvariable = secs)
+                tkgrid(ttklabel(cframe, text = "Days: "), row=1, column = 1)
+                tkgrid(days.entry, row=1, column = 2)
+                tkgrid(ttklabel(cframe, text = "Hours: "), row=1, column = 3)
+                tkgrid(hours.entry, row=1, column = 4)
+                tkgrid(ttklabel(cframe, text = "Minutes: "), row=1, column = 5)
+                tkgrid(mins.entry, row=1, column = 6)
+                tkgrid(ttklabel(cframe, text = "Seconds: "), row=1, column = 7)
+                tkgrid(secs.entry, row=1, column = 8)
+            tkgrid(cframe, row = 3, column = 1, sticky = "nsew")
+            tkgrid(ttkbutton(testDialog, text = "Generate AnswerKey Template from Test", 
+                             command = function() {
+                                test <- tclvalue(tkget(test.entry, "0.0", "end"))
+                                if(test == "") return(NULL)
+                                test <- try(xmlParse(test))
+                                if(!inherits(test, "try-error")) {
+                                    a <- GenerateAnswerKey(AnswerKeyTemplate(test))
+                                    tkinsert(answer.entry, "insert", a$string)
+                                }
+                                return(NULL)
+                             }), row = 3, column = 2)
+            okcancel(testDialog, row = 4, column = 1, columnspan = 2, stick = "s", okfun = storetest, 
+                     cancelfun = function() {tkdestroy(testDialog); tkfocus(wizard)})
+            tkgrid.columnconfigure(testDialog, 1, weight = 1)
+            tkgrid.columnconfigure(testDialog, 2, weight = 1)
+            tkgrid.rowconfigure(testDialog, 1, weight = 6)
+            tkgrid.rowconfigure(testDialog, 2, weight = 6)
+            tkgrid.rowconfigure(testDialog, 3, weight = 1)
+            tkgrid.rowconfigure(testDialog, 4, weight = 1)
             tkfocus(testDialog)
         }
         
