@@ -2,11 +2,13 @@
 
 ## SIGNIFICANT USER-VISIBILE CHANGES ##
 
+* The graphical wizard now allows users to create an Qualification AnswerKey Template (via `AnswerKeyTemplate`) from a manually entered Qualification Test. (#73)
 * `GrantBonus` now accepts a `unique.request.token` argument. (#75)
 * The unused `format` argument to `GenerateNotification` has been removed. (#71)
 
 ## DOCUMENTATION ##
 
+* Examples have been added to demonstrate functionality of `AnswerKeyTemplate`.
 * Documentation for `GrantQualification` and `RejectQualification` has been merged to clarify the use of these functions. Documentation has been expanded with complete examples of both functions. (#72)
 * `GenerateQualificationRequirement` now notes that U.S. state locale values (following ISO 3166-2 format) are allows. (#74)
 * `GenerateHITsFromTemplate` now has a more complete example that includes an installed template HTML file. (#72)
